权限功能添加
