# controllers/api/api_v1/check_form/menu.go
@@ -13,3 +13,15 @@ type AddMenu struct {
 	Icon      string `form:"icon"`
 	Sort      int    `form:"sort"`
 }
+
+type UpdateMenu struct {
+	gorm.Model
+	ParentId  string `form:"parent_id" valid:"Required"`
+	Path      string `form:"path"`
+	Name      string `form:"name" valid:"Required"`
+	Hidden    int    `form:"hidden"`
+	Component string `form:"component"`
+	Title     string `form:"title" valid:"Required"`
+	Icon      string `form:"icon"`
+	Sort      int    `form:"sort"`
+}
